--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <title>Simon</title>
 </head>
 <body>
+    <button onclick="play()">PLAY</button>
+    <div id="numContainer">
+        
+    </div>
     
     <script type="text/javascript" src="./assets/js/main.js"></script>
 </body>
